--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -42,11 +42,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DeleteThisEmptyClass.cs" />
+    <Compile Include="Models\ModelKlient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\RepoBase.cs" />
+    <Compile Include="Repositories\RepoKlient.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="Repositories\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
