Načítavanie podľa ID cez všetky miesta v programe, fugnujúce editovanie klienta, ukladanie. Dobrú noc všetkým čo to čítate

--- a/BankSystem/BankSystem.csproj
+++ b/BankSystem/BankSystem.csproj
@@ -60,6 +60,7 @@
     <Compile Include="frmAccounts.Designer.cs">
       <DependentUpon>frmAccounts.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmClientManagementViewModel.cs" />
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
