--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -43,9 +43,11 @@
   <ItemGroup>
     <Compile Include="DeleteThisEmptyClass.cs" />
     <Compile Include="Models\ModelKlient.cs" />
+    <Compile Include="Models\PlatobnaKarta.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\RepoBase.cs" />
     <Compile Include="Repositories\RepoKlient.cs" />
+    <Compile Include="Repositories\RepoPlatobnaKarta.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
