--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -42,11 +42,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DeleteThisEmptyClass.cs" />
+    <Compile Include="Models\ModelBankomat.cs" />
     <Compile Include="Models\ModelKlientTransakcia.cs" />
     <Compile Include="Models\ModelKlient.cs" />
     <Compile Include="Models\ModelPlatobnaKarta.cs" />
     <Compile Include="Models\ModelTransakcia.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\RepoBankomat.cs" />
     <Compile Include="Repositories\RepoBase.cs" />
     <Compile Include="Repositories\RepoKlient.cs" />
     <Compile Include="Repositories\RepoPlatobnaKarta.cs" />
